src/test/resources/invalid_tests/WrongArgument.cnna
architecture WrongArgument {
    def input in
    def output out
    
    in ->
    fullyConnected(units=64, no_bis=true)
    output{
        fullyConnected()
        activation.softmax()
    } -> out
}